--- a/apartados Nueva version2/GraficoCasos.html
+++ b/apartados Nueva version2/GraficoCasos.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
     <link rel="stylesheet" href="styleCuraciones.css">
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="flexContainer">
-        <nav class="nav">
+        <div class="menu_bar">
+            <a href="#" class="bt-menu"><img class="fotomenu" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/menu.png?raw=true"></a>
+        </div>
+        <nav>
             <ul>
                 <li>
                     <div class="volver">
                         <a href="Introduccion.html" class="Volver">
-                            <img class="volverfoto" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/cardiopatia-isquemica.png?raw=true">
+                            <b>Volver</b>
                         </a>
                     </div>
                 </li>
@@ -63,18 +66,27 @@
                         </div>
                     </b>
                 </li>
+                <li>
+                    <b>
+                        <div class="volver">
+                            <a href="Videos.html" class="Volver">
+                                <b>Videos</b>
+                            </a>
+                        </div>
+                    </b>
+                </li>
             </ul>
         </nav>
+        <script src="patata.js"></script>
         <main>
             <article>
                 <div class="texto">
-                    <h2>Què és</h2>
+                    <h2>Quan temps es pot viure amb aquesta malaltia?</h2>
                     <hr>
-                    <div class="paragrafo">
-                        <p>La cardiopatia isquèmica, o malaltia de les artèries coronàries, és una malaltia provocada per l'estrenyiment de les artèries que van al cor. Aquest problema fa que arribi un menor flux de sang al cor i causa un desequilibri en l'aportació d'oxigen al miocardi (teixit muscular del cor).
-                        </p>
-                        <img class="fotointro"   src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/portada-cardiopatia-isquemica-dr-arce-ab658721.png?raw=true">
-                    </div>
+                    <p>
+                        La cardiopatia isquèmica fa perdre gairebé 12 anys de vida sana per cada mil habitants. Les persones a qui es diagnostica la patologia poden tenir gran seqüeles cròniques al llarg de la seva vida.
+                    </p>
+                        <img class="fotointro3"   src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Imagen15.png?raw=true">
                 </div>
             </article>
             <aside>
