--- a/apartados Nueva version2/Prevenciones.html
+++ b/apartados Nueva version2/Prevenciones.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
     <link rel="stylesheet" href="styleCuraciones.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
 </head>
 <body>
     <div class="flexContainer">
             <div class="menu_bar">
-                <a href="#" class="bt-menu"><p>MENU</p></a>
+                <a href="#" class="bt-menu"><img class="fotomenu" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/menu.png?raw=true"></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        <div class="volver">
-                            <a href="Introduccion.html" class="Volver">
-                                <img class="volverfoto" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/cardiopatia-isquemica.png?raw=true">
-                            </a>
-                        </div>
+                        <b>
+                            <div class="volver">
+                                <a href="Introduccion.html" class="Volver">
+                                    <b>Volver</b>
+                                </a>
+                            </div>
+                        </b>
                     </li>
                     <li>
                         <b>
@@ -64,6 +64,15 @@
                             <div class="volver">
                                 <a href="GraficoCasos.html" class="Volver">
                                     <b>Grafics de casos</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="Videos.html" class="Volver">
+                                    <b>Videos</b>
                                 </a>
                             </div>
                         </b>
