--- a/apartados Nueva version2/Videos.html
+++ b/apartados Nueva version2/Videos.html
@@ -5,113 +5,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
     <link rel="stylesheet" href="styleCuraciones.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
 </head>
 <body>
     <div class="flexContainer">
-        <div class="menu_bar">
-            <a href="#" class="bt-menu"><img class="fotomenu" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/menu.png?raw=true"></a>
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <div class="volver">
-                        <a href="Introduccion.html" class="Volver">
-                            <b>Volver</b>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <b>
-                        <div class="volver">
-                            <div class="Volver2">
-                                <b>Causes</b>
+            <div class="menu_bar">
+                <a href="#" class="bt-menu"><img class="fotomenu" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/menu.png?raw=true"></a>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="Introduccion.html" class="Volver">
+                                    <b>Volver</b>
+                                </a>
                             </div>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="volver">
-                            <a href="Prevenciones.html" class="Volver">
-                                <b>Mesures de prevenció</b>
-                            </a>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="volver">
-                            <a href="TRATAMIENTO.html" class="Volver">
-                                <b>Tratactament</b>
-                            </a>
-                        </div>
-                    </b>
-                </li>                    
-                <li>
-                    <b>
-                        <div class="volver">
-                            <a href="curaciones.html" class="Volver">
-                                <b>Curacions</b>
-                            </a>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="volver">
-                            <a href="GraficoCasos.html" class="Volver">
-                                <b>Grafics de casos</b>
-                            </a>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="volver">
-                            <a href="Videos.html" class="Volver">
-                                <b>Videos</b>
-                            </a>
-                        </div>
-                    </b>
-                </li>
-            </ul>
-        </nav>
-        <script src="patata.js"></script>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="Causas.html" class="Volver">
+                                    <b>Causes</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="Prevenciones.html" class="Volver">
+                                    <b>Mesures de prevencio</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="TRATAMIENTO.html" class="Volver">
+                                    <b>Tratactament</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>                    
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="curaciones.html" class="Volver">
+                                    <b>Curacions</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="GraficoCasos.html" class="Volver">
+                                    <b>Grafics de casos</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <div class="Volver2">
+                                    <b>Videos</b>
+                                </div>
+                            </div>
+                        </b>
+                    </li>
+                </ul>
+            </nav>
+            <script src="patata.js"></script>
         <main>
             <article>
-                <div class="texto">
-                    <div class="textoescrito">
-                        <div class="paragrafo">
-                            <h2>Causes</h2>
-                            <hr>                            
-                            <p>Aquesta malaltia és deguda a l'estrenyiment de les artèries coronàries. És un procés que, generalment, es produeix de manera gradual. Al llarg de la vida es va acumulant greix (lípids), o també anomenades plaques d'ateroma, a les parets de les artèries, si aquestes plaques no es dissolen es van emmagatzemant. A poc a poc aquestes plaques van dificultant el pas de la sang per les artèries i endurint-ne la paret, tornant-se gruixuda i poc flexible. A aquest problema també se'l coneix com a arteriosclerosi.</p>
-                            <br>
-                            <h2>Factors de riscs</h2>
-                            <hr>
-                            <p>-N’hi ha una sèrie de factors de risc, uns modificables i altres no, que dificulten la desaparició de les plaques d'ateroma com ara:</p>
-                            <p>-Edat avançada.</p>
-                            <p>-Sexe masculí.</p>
-                            <p>-Antecedents familiars de cardiopatia isquèmica abans dels 50 anys.</p>
-                            <p>-Concentració alta de colesterol LDL a sang i baixa de lipoproteïnes altes (HDL).</p>
-                            <p>-Consum de tabac.</p>
-                            <p>-Patir diabetis mellitus, obesitat o hipertensió arterial.</p>
-                            <p>-Hàbits no saludables: mala alimentació, poca activitat física.</p>
-                            <br>
-                            <h2>SINTOMES</h2>
-                            <hr>
-                            <p>-La pressió o dolor en el pit (en general en el costat esquerre) que es produeix amb l'activitat física o després dels menjars.</p>
-                            <p>-Dolor en el coll i  la mandíbula. </p>
-                            <p>-Dolor en l'espatlla o al braç.</p>
-                            <p>-Batecs de cor ràpids.</p>
-                            <p>-Dificultat per a respirar quan estàs físicament actiu.</p>
-                            <p>-Nàusees i vòmits.</p>
-                            <p>-Sudoració.</p>
-                            <p>-Fatiga.</p>
-                        </div>
+                <div>
+                    <div>
+                        <iframe class="videos"  src="https://www.youtube.com/embed/4KefGS0Zs10?si=G80CIFa5Uqif1LPa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <p>“Com a metges podem fer molt per a ajudar als pacients, però realment és més important el que ells facin perquè pot millorar moltíssim el seu pronòstic: deixar de fumar; seguir una alimentació equilibrada; perdre pes, si és necessari, i fer una mica d'exercici”.
+                            Manel Sabaté.
+                            Cardioleg.
+                        </p>
                     </div>
+                    <iframe class="videos" src="https://www.youtube.com/embed/7KAan82-uEk?si=CAa-OGCByHtNEZs2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <p>“Que es prengui la vida amb molta alegria, amb molta il·lusió. Que no passa res, que la vida continúa. Som gent normal. Som gent que podem fer de tot igual. Fins i tot millor que abans, perquè ens cuidem més”.
+                        José Antonio.
+                        Pacient
+                    </p>
                 </div>
-            </article>    
+            </article>
             <aside>
                 <!--INICI-->
                 <ul class="chatList">
@@ -231,7 +216,7 @@
                 <ul class="comment">
                     <li>
                         <div class="comentario">
-                            <textarea rows="1" cols="20"></textarea>
+                            <textarea rows="1"></textarea>
                         </div>
                      </li>
                     <li>
