--- a/apartados Nueva version2/TRATAMIENTO.html
+++ b/apartados Nueva version2/TRATAMIENTO.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
     <link rel="stylesheet" href="styleCuraciones.css">
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="flexContainer">
-        <nav class="nav">
+        <div class="menu_bar">
+            <a href="#" class="bt-menu"><img class="fotomenu" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/menu.png?raw=true"></a>
+        </div>
+        <nav>
             <ul>
                 <li>
                     <div class="volver">
                         <a href="Introduccion.html" class="Volver">
-                            <img class="volverfoto" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/cardiopatia-isquemica.png?raw=true">
+                            <b>Volver</b>   
                         </a>
                     </div>
                 </li>
@@ -63,24 +66,31 @@
                         </div>
                     </b>
                 </li>
+                <li>
+                    <b>
+                        <div class="volver">
+                            <a href="Videos.html" class="Volver">
+                                <b>Videos</b>
+                            </a>
+                        </div>
+                    </b>
+                </li>
             </ul>
         </nav>
+        <script src="patata.js"></script>
         <main>
             <article>
                 <div class="paragrafo">
                 <h2>Alimentacio</h2>
                 <hr>
-                <p>
-                    <img class="fotointro4" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/piramide.png?raw=true">
-                </p>
+                <img class="fotointro4" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/piramide.png?raw=true">
                 <br>
                 
                 <h2>Tractaments</h2>
                 <hr>
                 <h3>El tractament farmacològic habitual són:</h3>
                 <br>
-                <p><img class="fotointro2" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Imagen4.png?raw=true">
-                    · &nbsp Analgèsics.</p>
+                <p>· &nbsp Analgèsics.</p>
                 <p>· &nbsp Antiagregants plaquetaris.</p>
                 <p>· &nbsp Betabloquejants.</p>
                 <p>· &nbsp Antagonistes de calci.</p>
