--- a/apartados Nueva version2/curaciones.html
+++ b/apartados Nueva version2/curaciones.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
     <link rel="stylesheet" href="styleCuraciones.css">
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="flexContainer">
-        <nav class="nav">
+        <div class="menu_bar">
+            <a href="#" class="bt-menu"><img class="fotomenu" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/menu.png?raw=true"></a>
+        </div>
+        <nav>
             <ul>
                 <li>
                     <div class="volver">
                         <a href="Introduccion.html" class="Volver">
-                            <img class="volverfoto" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/cardiopatia-isquemica.png?raw=true">
+                            <b>Volver</b>
                         </a>
                     </div>
                 </li>
@@ -63,8 +66,18 @@
                         </div>
                     </b>
                 </li>
+                <li>
+                    <b>
+                        <div class="volver">
+                            <a href="Videos.html" class="Volver">
+                                <b>Videos</b>
+                            </a>
+                        </div>
+                    </b>
+                </li>
             </ul>
         </nav>
+        <script src="patata.js"></script>
         <main>
             <article>
                 <div class="texto">
@@ -116,6 +129,7 @@
                         <div class="list-cases">
                             <img src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/Pravastatina.png?raw=true" alt="image"/>
                             <a class="text" data-cases="quietevents" href="#">Pravastatina</a>
+                        </div>
                     </div>
                 </div>
             </article>
